@@ -1,3 +1,12 @@
+2006-11-03 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/include/mcs51/c8051f020.h,
+	* device/include/mcs51/c8051f040.h,
+	* device/include/mcs51/c8051f060.h,
+	* device/include/mcs51/c8051f120.h: added PS0, fixed bug 1589279
+	* src/z80/gen.c (gencjneshort),
+	* src/z80/peeph.def: applied patch 1571373, thanks Philipp Krause
+
 2006-10-31 Borut Razem <borut.razem AT siol.net>
 
 	* debugger/mcs51/acinclude.m4, debugger/mcs51/aclocal.m4,
